--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section class="bio">
     <h2>Meet Cathryn Cavazos</h2>
     <div class="bio-img">
-      <img src="images/cathryn.jpeg" alt="Cathryn Cavazos - Coach">
+      <img src="cathryn.jpeg" alt="Cathryn Cavazos - Coach">
       <p>Strength Coach · World-Level Competitor · Advocate for Women in Powerlifting</p>
     </div>
      <ul>
@@ -102,3 +102,4 @@
   </footer>
 </body>
 </html>
+
